Fix best post list text overflow

--- a/src/app/right-menu/best-post-list/best-post-list.component.css
+++ b/src/app/right-menu/best-post-list/best-post-list.component.css
@@ -6,15 +6,15 @@ a {
 ol {
     display: flex;           /* establish flex container */
     flex-direction: column;  /* make main axis vertical */
-    justify-content: center; /* center items vertically, in this case */
-    align-items: center;     /* center items horizontally, in this case */
+    justify-content: left; 
+    align-items: left;     
     padding: 0px;
     /* list-style-type:none; */
 }
 
 li {
-    margin: 5px;
-    list-style-position:inside;
+    margin: 0px 20px;
+    /* list-style-position:inside; */
     white-space: nowrap;
 }
 
